--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # http://github.com/RailsApps/rails-composer/issues
 #----------------------------------------------------------------------------
 
+# backup files
+*~
+
 # bundler state
 /.bundle
 /vendor/bundle/
