--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,19 @@
 #----------------------------------------------------------------------------
 
 # backup files
-*~
+**~
+
+# phusion passenger restart
+/tmp/restart.txt
+
+# compiled assets
+/public/assets/application-*.css
+/public/assets/application-*.css.gz
+/public/assets/application-*.js
+/public/assets/application-*.js.gz
+/public/assets/favicon-*.ico
+/public/assets/glyphicons-halflings-*.png
+/public/assets/manifest-*.json
 
 # bundler state
 /.bundle
