--- a/test/fixtures/attachments.yml
+++ b/test/fixtures/attachments.yml
@@ -1,14 +1,14 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  entry_id: 
+  entry_id: 1
   attachment_file_name: MyString
   attachments_file_size: MyString
   attachment_content_type: MyString
   attachment_updated_at: MyString
 
 two:
-  entry_id: 
+  entry_id: 1
   attachment_file_name: MyString
   attachments_file_size: MyString
   attachment_content_type: MyString
