--- a/test/fixtures/classifications.yml
+++ b/test/fixtures/classifications.yml
@@ -4,8 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one: 
+  name: 'N/A'
 # column: value
 #
-two: {}
+two:
+  name: 'A'
 #  column: value
