--- a/test/fixtures/entries.yml
+++ b/test/fixtures/entries.yml
@@ -6,6 +6,22 @@ one:
   typenum: MyString
   serialnum: MyString
   note: MyString
+  name: MyString
+  defect: MyString
+  ordered: MyString
+  repaired: 0
+  ready: 0
+  scrap: 0
+  accessoires: 0
+  test: 0
+  sent: 0
+  company: MyString
+  appliance_id: 1
+  invoice_id: 1
+  repaired: MyString
+  testera: MyString
+  testerb: MyString
+  class_id: 1
 
 two:
   number: MyString
@@ -13,3 +29,19 @@ two:
   typenum: MyString
   serialnum: MyString
   note: MyString
+  name: MyString
+  defect: MyString
+  ordered: MyString
+  repaired: 0
+  ready: 0
+  scrap: 0
+  accessoires: 0
+  test: 0
+  sent: 0
+  company: MyString
+  appliance_id: 1
+  invoice_id: 1
+  repaired: MyString
+  testera: MyString
+  testerb: MyString
+  class_id: 1
