--- a/config/database.yml
+++ b/config/database.yml
@@ -3,57 +3,57 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+#development:
+#  adapter: sqlite3
+#  database: db/development.sqlite3
+#  pool: 5
+#  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
-
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
-
-# PostgreSQL 9.1
-#development:
-#  adapter: postgresql
-#  encoding: unicode
-#  database: badger_development
-#  pool: 5
-#  username: badger
-#  password: imabadgerwoo
-#  host:     localhost
-#  schema_search_path: public
-#  min_messages: warning
-
 #test:
-#  adapter: postgresql
-#  encoding: unicode
-#  database: badger_test
+#  adapter: sqlite3
+#  database: db/test.sqlite3
 #  pool: 5
-#  username: badger
-#  password: imabadgerwoo
-#  host:     localhost
-#  schema_search_path: public
-#  min_messages: warning
+#  timeout: 5000
 
 #production:
-#  adapter: postgresql
-#  encoding: unicode
-#  database: badger_production
+#  adapter: sqlite3
+#  database: db/production.sqlite3
 #  pool: 5
-#  username: badger
-#  password: imabadgerwoo
-#  host:     localhost
-#  schema_search_path: public
-#  min_messages: warning
+#  timeout: 5000
+
+# PostgreSQL 9.1
+development:
+  adapter: postgresql
+  encoding: unicode
+  database: badger_development
+  pool: 5
+  username: badger
+  password: imabadgerwoo
+  host:     localhost
+  schema_search_path: public
+  min_messages: warning
+
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: badger_test
+  pool: 5
+  username: badger
+  password: imabadgerwoo
+  host:     localhost
+  schema_search_path: public
+  min_messages: warning
+
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: badger_production
+  pool: 5
+  username: badger
+  password: imabadgerwoo
+  host:     localhost
+  schema_search_path: public
+  min_messages: warning
