--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -7,9 +7,14 @@
 # makes 'Your_Gmail_Username' available as ENV["GMAIL_USERNAME"]
 # Add application configuration variables here, as shown below.
 #
-GMAIL_USERNAME: Your_Username
-GMAIL_PASSWORD: Your_Password
-ADMIN_NAME: First User
-ADMIN_EMAIL: user@example.com
-ADMIN_PASSWORD: changeme
-ROLES: [admin, user, VIP]
+GMAIL_USERNAME: ...
+GMAIL_PASSWORD: ...
+
+ADMIN_NAME: ...
+ADMIN_EMAIL: ...
+ADMIN_PASSWORD: ...
+
+# Add any company you make in here as a role
+ROLES: [admin, manager, technician, user, guest]
+
+COMPANY: '...'
