Mailers now work async using sucker_punch, error will be reported with party_foul

--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -1,5 +1,13 @@
 # These are all available as ENV['NAME'] eg. ENV['DEV_NAME'] returns DEV_NAME
 
+# Where is the server hosted
+BASE_URL: ...
+
+# GitHub info
+GITHUB_NAME: ...
+GITHUB_REPO: ...
+GITHUB_AUTH: ... # You'll need to generate your own on GitHub
+
 # Mailer info
 GMAIL_USERNAME: ...
 GMAIL_PASSWORD: ...
